feature: translation aplicated

--- a/src/locales/translation/es.json
+++ b/src/locales/translation/es.json
@@ -1,3 +1,8 @@
 {
+    "dashboard": "Panel",
+    "room": "Habitaciones",
+    "bookings": "Reservas",
+    "guest": "Huéspedes",
+    "concierge": "Trabajadores",
     "contact_button": "Contáctanos"
 }
