--- a/src/locales/translation/en.json
+++ b/src/locales/translation/en.json
@@ -1,3 +1,8 @@
 {
-    "contact_button": "Contact Us"
+    "dashboard": "Dashboard",
+    "room": "Rooms",
+    "bookings": "Bookings",
+    "guest": "Guest",
+    "concierge": "Concierge",
+    "contact_button": "Contact us"
 }
