--- a/src/locales/translation/va.json
+++ b/src/locales/translation/va.json
@@ -1,3 +1,8 @@
 {
+    "dashboard": "Panell",
+    "room": "Habitacions",
+    "bookings": "Reserves",
+    "guest": "Hostes",
+    "concierge": "Treballadors",
     "contact_button": "Contacta'ns"
 }
