feature:fix bug and changed one word

--- a/src/locales/translation/es.json
+++ b/src/locales/translation/es.json
@@ -3,6 +3,6 @@
     "room": "Habitaciones",
     "bookings": "Reservas",
     "guest": "Huéspedes",
-    "concierge": "Trabajadores",
+    "concierge": "Empleados",
     "contact_button": "Contáctanos"
 }
