--- a/src/locales/translation/va.json
+++ b/src/locales/translation/va.json
@@ -3,6 +3,6 @@
     "room": "Habitacions",
     "bookings": "Reserves",
     "guest": "Hostes",
-    "concierge": "Treballadors",
+    "concierge": "Empleats",
     "contact_button": "Contacta'ns"
 }
